<resources>
    <string name="app_name">Agenda Proyecto</string>
    <string name="contacto_nombre">Contacto Nombre</string>
    <string name="tel_fono">Teléfono</string>
    <string name="agregar_contacto">Agregar Contacto</string>
    <string name="nombre">Nombre</string>
    <string name="guardar">Guardar</string>
    <string name="email">Email</string>
    <string name="delete">Borrar</string>
    <string name="phone_icon">Teléfono</string>
    <string name="email_icon">Email\n</string>
    <string name="favorito">Favorito</string>
    <string name="modificar_contacto">Modificar Contacto</string>
    <string name="barra_busqueda">Buscar contacto</string>
</resources>