<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="8dp"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Botón de eliminar (parte superior derecha) -->
            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:background="@null"
                android:contentDescription="@string/delete"
                android:padding="8dp"
                android:src="@drawable/ic_delete" />

            <!-- Nombre del contacto -->
            <TextView
                android:id="@+id/tvContactName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/livvic_medium"
                android:text="@string/contacto_nombre"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <!-- Teléfono del contacto -->
            <LinearLayout
                android:id="@+id/phoneContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvContactName"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/phone_icon"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:id="@+id/tvContactPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/livvic_medium"
                    android:text="@string/tel_fono"
                    android:textColor="@color/material_dynamic_neutral20"
                    android:textSize="18sp" />
            </LinearLayout>

            <!-- Email del contacto -->
            <LinearLayout
                android:id="@+id/emailContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/phoneContainer"
                android:layout_alignParentStart="true"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/email_icon"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:id="@+id/tvContactEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/livvic_medium"
                    android:text="@string/email"
                    android:textColor="@color/material_dynamic_neutral20"
                    android:textSize="18sp" />
            </LinearLayout>
        </RelativeLayout>

        <!-- Icono de favorito (estrella) en la esquina inferior derecha -->
        <ImageButton
            android:id="@+id/btnFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:contentDescription="@string/favorito"
            android:padding="8dp"
            android:src="@drawable/ic_estrella" />
    </FrameLayout>
</com.google.android.material.card.MaterialCardView>